<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Gameforma App</string>
    <string name="gameforma">Gameforma</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="title_favorites">Favorites</string>
    <string name="header_home">Discover Games</string>
    <string name="search">Search</string>
    <string name="favorite_btn">Favorite Button</string>
    <string name="about">About</string>
    <string name="playtime_placeholder" tools:ignore="PluralsCandidate">Average Playtime: %d hours</string>
    <string name="platforms">Platforms</string>
    <string name="metascore">Metascore</string>
    <string name="age_rating">Age Rating</string>
    <string name="tags">Tags</string>
    <string name="sheet_line">sheet line</string>
    <string name="search_result">Search Result</string>
    <string name="search_hint_anim">Type on the search field \nto begin your search!</string>
    <string name="find_out_your_favorite_game">Find out your favorite game</string>
    <string name="added_fav">This game have been added to favorite.</string>
    <string name="removed_fav">This game have been removed from favorite.</string>
    <string name="gameforma_about">Gameforma is a game database application which have 722,222 data of games currently.\nData shown in this application are provided by RAWG\'s public API.</string>
    <string name="learn_more">Learn More</string>
    <string name="network_error_please_try_again_later">Network error, please try again later</string>
</resources>